ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral6/input.ts.stderr
error: Expected a decimal digit
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral6/input.ts:2:4
  |
2 | 1e+
  |    ^

